--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
     "shadcn-ui": "^0.9.3",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
