--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ NEXT_PUBLIC_BASE_URL=http://localhost:3000
 
 # Ollama Configuration
 NEXT_PUBLIC_OLLAMA_SERVER_URL=http://localhost:11434
-NEXT_PUBLIC_DEFAULT_MODEL=llama3.1
+NEXT_PUBLIC_DEFAULT_MODEL=null
 
 # File Upload Limits (optional)
 NEXT_PUBLIC_MAX_FILE_SIZE=100000000
