--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "common-tags": "^1.8.2",
     "date-fns": "^4.1.0",
     "geist": "^1.2.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "latest",
     "next-themes": "^0.4.3",
@@ -34,6 +35,7 @@
     "react-dropzone": "^14.3.5",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.6.1",
+    "remark-gfm": "^4.0.0",
     "shadcn-ui": "^0.9.3",
     "uuid": "^11.0.3",
     "zustand": "^5.0.1"
@@ -41,6 +43,7 @@
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
     "@types/common-tags": "^1.8.4",
+    "@types/lodash": "^4.17.13",
     "@types/node": "22.9.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "18.3.1",
