--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
+    "react-hot-toast": "^2.5.1",
     "react-markdown": "^9.0.1",
     "react-redux": "^9.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-textarea-autosize": "^8.5.6",
     "remark-gfm": "^4.0.0",
     "shadcn-ui": "^0.9.3",
+    "sonner": "^1.7.1",
     "uuid": "^11.0.3",
     "zustand": "^5.0.1"
   },
